--- a/README
+++ b/README
@@ -330,5 +330,4 @@ VANITYNUMBER(<vanitynumber>)
     Converts the 'vanitynumber' into a digit-only string. International keypad is
     used, e.g. ABC=1, DEF=2, ...
 
-
-
+Test.
