--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+chan_capi-cm-0.6.5
+------------------
 - fixed compilation with Asterisk 1.0.7
 - fixed call deflect if number is longer
 - removed function VANITYNUMBER, this does not belong into channel drivers
