--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 CHANGES
 =======
 
-HEAD
+chan_capi-1.1.1
 ------------------
 - fixed controller count when creating NULL-PLCI interface.
 - simplified check for unused controller.
