--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
 CHANGES
 =======
 
-HEAD
+chan_capi-1.1.6
 ------------------
 - Asterisk 1.8 changes
 - added dialplan variables ISDNPI1 and ISDNPI2
