--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@ HEAD
 - check for bchannel information element on incoming call
 - added 't' option to select in-band tones available indication as Q.931
   (thanks to Maciej S. Szmigiero <mail@maciej.szmigiero.name>)
+- support for Asterisk 13 (thanks to Michael Kuron <m.kuron@gmx.de>)
 
 
 chan_capi-1.1.6
